--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Product Catalog</title>
     <meta name="description" content="Browse our extensive product catalog with detailed information and pricing.">
     <meta name="keywords" content="product catalog, online store, e-commerce">
+    <meta name="google-site-verification" content="lk0jV_PGgfN3-VT8uGPMwVYVWOwPlrwS_fY11u7J3Ok" />
+
     <style>
         body {
             font-family: Arial, sans-serif;
