--- a/index.html
+++ b/index.html
@@ -48,6 +48,15 @@
     <div class="product-grid">
         
         <div class="product-card">
+            <img src="images/product_215_main.jpg" alt="Identifix Online 1 year Account Access">
+            <a href="identifix-online-1-year-account-access-bb-100178.html" class="cta-button">View Details</a>
+            <h2>Identifix Online 1 year Account Access</h2>
+            <p><b>Price:</b> $200.00</p>
+            <!-- <a href="identifix-online-1-year-account-access-bb-100178.html" class="cta-button">View Details</a> -->
+        </div>
+    
+
+        <div class="product-card">
             <img src="images/product_53_main.jpg" alt="BMW OEM Diagnosis Engineer System Training Book">
             <a href="bmw-oem-diagnosis-engineer-system-training-book-bb-100001.html" class="cta-button">View Details</a>
             <h2>BMW OEM Diagnosis Engineer System Training Book</h2>
