--- a/index.html
+++ b/index.html
@@ -57,6 +57,15 @@
     
 
         <div class="product-card">
+            <img src="" alt="HaynesPro Full Pack Online 1 month / 1 year">
+            <a href="product-216.html" class="cta-button">View Details</a>
+            <h2>HaynesPro Full Pack Online 1 month / 1 year</h2>
+            <p><b>Price:</b> $65.00</p>
+            <!-- <a href="product-216.html" class="cta-button">View Details</a> -->
+        </div>
+    
+
+        <div class="product-card">
             <img src="images/product_53_main.jpg" alt="BMW OEM Diagnosis Engineer System Training Book">
             <a href="bmw-oem-diagnosis-engineer-system-training-book-bb-100001.html" class="cta-button">View Details</a>
             <h2>BMW OEM Diagnosis Engineer System Training Book</h2>
