--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
 
         <div class="product-card">
             <img src="" alt="HaynesPro Full Pack Online 1 month / 1 year">
-            <a href="product-216.html" class="cta-button">View Details</a>
+            <a href="haynespro-full-pack-online-1-month-1-year-bb-100179.html" class="cta-button">View Details</a>
             <h2>HaynesPro Full Pack Online 1 month / 1 year</h2>
             <p><b>Price:</b> $65.00</p>
-            <!-- <a href="product-216.html" class="cta-button">View Details</a> -->
+            <!-- <a href="haynespro-full-pack-online-1-month-1-year-bb-100179.html" class="cta-button">View Details</a> -->
         </div>
     
 
