--- a/winols-ktag-video-course-scr-adblue-off-volvo-renault-trucks-trw-ems2.2-ems2.3-ems2.4-ecu-bb-100004.html
+++ b/winols-ktag-video-course-scr-adblue-off-volvo-renault-trucks-trw-ems2.2-ems2.3-ems2.4-ecu-bb-100004.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WinOLS + KTAG Video Course How to SCR AdBlue OFF on Volvo, Renault trucks for TRW EMS 2.2, EMS 2.3 &amp; 2.4 ECU</title>
+    <title>WinOLS and KTAG Video Course for TRW EMS 2.2, EMS 2.3 &amp; 2.4 ECU</title>
     <meta name="description" content="Learn how to disable SCR AdBlue on Volvo and Renault trucks using WinOLS and KTAG in a comprehensive video course">
     <meta name="keywords" content="WinOLS, KTAG, SCR AdBlue OFF, Volvo trucks, Renault trucks, Volvo TRW ECU, AdBlue system disable, KTAG Tool, WinOLS Software, ECU programming, truck tuning, AdBlue removal, vehicle remapping, automotive diagnostics, diesel engine tuning, free download, free installer, free download installer, WinOLS video course, KTAG video course, AdBlue OFF video course, Volvo ECU programming, Renault ECU programming, TRW EMS 2.2, TRW EMS 2.3, TRW EMS 2.4, truck diagnostic software, AdBlue OFF KTAG, AdBlue OFF WinOLS, Volvo AdBlue OFF, Renault AdBlue OFF, ECU programming videos, truck diagnostic software download, truck tuning software free download, видео курс WinOLS, видео курс KTAG, отключение AdBlue на Volvo, отключение AdBlue на Renault, программирование ЭБУ Volvo, программирование ЭБУ Renault, диагностика грузовиков, бесплатная загрузка, скачать бесплатно">
     <style>
