--- a/autodata-online-for-1-year-d-r-kit-eng-bb-100040.html
+++ b/autodata-online-for-1-year-d-r-kit-eng-bb-100040.html
@@ -93,9 +93,7 @@
   "@context": "https://schema.org/",
   "@type": "Product",
   "name": "Autodata online for 1 year D&amp;R kit Eng",
-  "image": [
-    "https://balabobbi.github.io/images/product_85_main.jpg"
-  ],
+  "image": [],
   "description": "Autodata online for 1 year D&amp;R kit Eng\nSoftware Type: Online&nbsp;(Diagnostic + Repair, includes wiring diagram)\nExpiration: 1 year\nLanguages: English\n&nbsp;\nThe Autodata Online is an essential tool for automotive service, repair, and diagnostics. The solution provides access to technical information for 45,000 models from 82 manufacturers. The program significantly speeds up work related to vehicle servicing, repair, and diagnostics.\nParts catalogs and repair manuals for the following brands of special equipment:\nAtlas Copco, Bobcat, Bomag, Briggs/Stratton, BT, Case, Caterpillar, Challenger, Claas, Cummins, Daewoo, Deutz, Dynapac, FIAT, Ford, Fuchs/Terex, Fuller, Hitachi, Hyundai, JCB, John Deere, Kamaz, Kobelco, Komatsu, Kubota, Liebherr, Linde, MAN, Massey Ferguson, New Holland, Orenstein/Koppel, Perkins, Renault, Terex, Toyota, Volvo, Yanmar, ZF.",
   "sku": "SKU-100040",
   "mpn": "bb-100040",
@@ -121,7 +119,7 @@
         </header>
         <div class="product-content">
             <div class="product-image">
-                <img src="images/product_85_main.jpg" alt="Autodata online for 1 year D&amp;R kit Eng">
+                <img src="" alt="Autodata online for 1 year D&amp;R kit Eng">
             </div>
             <div class="product-details">
                 <div class="product-price">$200.00</div>
