--- a/index.html
+++ b/index.html
@@ -1506,7 +1506,7 @@
     
     </div>
     <footer>
-        <p>For more information and to make purchases, please visit our <a href="https://balabobbi.com/">main store</a>.</p>
+        <p>For more information and to make purchases, please visit our <a href="https://balabobbi.com/" rel="nofollow">main store</a>.</p>
     </footer>
 </body>
 </html>
