--- a/index.html
+++ b/index.html
@@ -66,6 +66,15 @@
     
 
         <div class="product-card">
+            <img src="images/product_217_main.jpg" alt="TecDoc Online 1 Year Access">
+            <a href="tecdoc-online-1-year-access-bb-100180.html" class="cta-button">View Details</a>
+            <h2>TecDoc Online 1 Year Access</h2>
+            <p><b>Price:</b> $150.00</p>
+            <!-- <a href="tecdoc-online-1-year-access-bb-100180.html" class="cta-button">View Details</a> -->
+        </div>
+    
+
+        <div class="product-card">
             <img src="images/product_53_main.jpg" alt="BMW OEM Diagnosis Engineer System Training Book">
             <a href="bmw-oem-diagnosis-engineer-system-training-book-bb-100001.html" class="cta-button">View Details</a>
             <h2>BMW OEM Diagnosis Engineer System Training Book</h2>
