--- a/index.html
+++ b/index.html
@@ -75,6 +75,15 @@
     
 
         <div class="product-card">
+            <img src="images/product_218_main.jpg" alt="VAG ODIS Service 24 (ODIS-S) Activation">
+            <a href="vag-odis-service-24-activation-bb-100181.html" class="cta-button">View Details</a>
+            <h2>VAG ODIS Service 24 (ODIS-S) Activation</h2>
+            <p><b>Price:</b> $35.00</p>
+            <!-- <a href="vag-odis-service-24-activation-bb-100181.html" class="cta-button">View Details</a> -->
+        </div>
+    
+
+        <div class="product-card">
             <img src="images/product_53_main.jpg" alt="BMW OEM Diagnosis Engineer System Training Book">
             <a href="bmw-oem-diagnosis-engineer-system-training-book-bb-100001.html" class="cta-button">View Details</a>
             <h2>BMW OEM Diagnosis Engineer System Training Book</h2>
