--- a/haynespro-full-pack-online-1-month-1-year-bb-100179.html
+++ b/haynespro-full-pack-online-1-month-1-year-bb-100179.html
@@ -129,7 +129,9 @@ main();
   "@context": "https://schema.org/",
   "@type": "Product",
   "name": "HaynesPro Full Pack Online 1 month / 1 year",
-  "image": [],
+  "image": [
+    "https://balabobbi.github.io/images/product_216_main.jpg"
+  ],
   "description": "HaynesPro Full Pack Online 1 month / 1 year\nFor: Android IOS / MacOS / Tablet PC / Desktop / Laptop\nBefore placing your order, please select the subscription period for HaynesPro Access in the Available Options: for 1 month or 1 year.\nHaynesPro is an automotive data solutions and workflow provider with over 25 years of experience in dealing with different challenges within the Automotive aftermarket. Our sole aim is to help create value for every branch within the automotive aftermarket using clever IT solutions and clearly better data.\nHaynesPro combines essential maintenance and repair data with detailed technical drawings, a unique electronics data module and intelligent diagnostics. It allows parts distributors to provide the perfect solution, enabling mechanics to diagnose, maintain and repair passenger cars and light commercial vehicles.\nIncludes:\nOverview\nMaintenance\nRepair Data\nElectronics\nSmartPACK",
   "sku": "",
   "mpn": "bb-100179",
@@ -155,7 +157,7 @@ main();
         </header>
         <div class="product-content">
             <div class="product-image">
-                <img src="" alt="HaynesPro Full Pack Online 1 month / 1 year" loading="lazy">
+                <img src="images/product_216_main.jpg" alt="HaynesPro Full Pack Online 1 month / 1 year" loading="lazy">
             </div>
             <div class="product-details">
                 <div class="product-price">$65.00</div>
