--- a/index.html
+++ b/index.html
@@ -93,6 +93,15 @@
     
 
         <div class="product-card">
+            <img src="images/product_220_main.jpg" alt="Cummins INCAL Tool v8.3">
+            <a href="cummins-incal-tool-v-8-3-bb-100183.html" class="cta-button">View Details</a>
+            <h2>Cummins INCAL Tool v8.3</h2>
+            <p><b>Price:</b> $265.00</p>
+            <!-- <a href="cummins-incal-tool-v-8-3-bb-100183.html" class="cta-button">View Details</a> -->
+        </div>
+    
+
+        <div class="product-card">
             <img src="images/product_53_main.jpg" alt="BMW OEM Diagnosis Engineer System Training Book">
             <a href="bmw-oem-diagnosis-engineer-system-training-book-bb-100001.html" class="cta-button">View Details</a>
             <h2>BMW OEM Diagnosis Engineer System Training Book</h2>
