--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
     
 
         <div class="product-card">
-            <img src="images/product_219_main.jpg" alt="ODIS Engineering 18 (ODIS-E) Activation">
+            <img src="images/product_219_main.jpg" alt="VAG ODIS Engineering 18 (ODIS-E) Activation">
             <a href="odis-engineering-18-activation-bb-100182.html" class="cta-button">View Details</a>
-            <h2>ODIS Engineering 18 (ODIS-E) Activation</h2>
+            <h2>VAG ODIS Engineering 18 (ODIS-E) Activation</h2>
             <p><b>Price:</b> $35.00</p>
             <!-- <a href="odis-engineering-18-activation-bb-100182.html" class="cta-button">View Details</a> -->
         </div>
