--- a/odis-engineering-18-activation-bb-100182.html
+++ b/odis-engineering-18-activation-bb-100182.html
@@ -128,11 +128,11 @@ main();
     {
   "@context": "https://schema.org/",
   "@type": "Product",
-  "name": "ODIS Engineering 18 (ODIS-E) Activation",
+  "name": "VAG ODIS Engineering 18 (ODIS-E) Activation",
   "image": [
     "https://balabobbi.github.io/images/product_219_main.jpg"
   ],
-  "description": "ODIS Engineering 18 (ODIS-E)\nSoftware Type: Diagnostic and Programming Software\nLicense: unlimited\nLanguages: English\nSupported Hardware: VAS6154 genuine devices or with Passthru interfaces.\nOperating system: Only Windows 10 or 11\nThe ODIS Engineering is designed for performing coding, adaptations, and settings of electronic control units.\nPlease note that certain coding functions can only be performed with online access, and you will not be able to use the online features and code the unit without a password and login (which are provided by official representatives).\nThis version uses D-PDU API Volkswagen 29.0.0 witch is the same as the one used in ODIS-S 23.2.x.\nThe program is locked for 1 computer and it does not work in Virtual Machines.\nMessage me to receive the download link for the software, install the program, and request an activation key.",
+  "description": "VAG ODIS Engineering 18 (ODIS-E)\nSoftware Type: Diagnostic and Programming Software\nLicense: unlimited\nLanguages: English\nSupported Hardware: VAS6154 genuine devices or with Passthru interfaces.\nOperating system: Only Windows 10 or 11\nThe ODIS Engineering is designed for performing coding, adaptations, and settings of electronic control units.\nPlease note that certain coding functions can only be performed with online access, and you will not be able to use the online features and code the unit without a password and login (which are provided by official representatives).\nThis version uses D-PDU API Volkswagen 29.0.0 witch is the same as the one used in ODIS-S 23.2.x.\nThe program is locked for 1 computer and it does not work in Virtual Machines.\nMessage me to receive the download link for the software, install the program, and request an activation key.",
   "sku": "",
   "mpn": "bb-100182",
   "brand": {
@@ -153,11 +153,11 @@ main();
 <body>
     <div class="product-container">
         <header class="product-header">
-            <h1>ODIS Engineering 18 (ODIS-E) Activation</h1>
+            <h1>VAG ODIS Engineering 18 (ODIS-E) Activation</h1>
         </header>
         <div class="product-content">
             <div class="product-image">
-                <img src="images/product_219_main.jpg" alt="ODIS Engineering 18 (ODIS-E) Activation" loading="lazy">
+                <img src="images/product_219_main.jpg" alt="VAG ODIS Engineering 18 (ODIS-E) Activation" loading="lazy">
             </div>
             <div class="product-details">
                 <div class="product-price">$35.00</div>
@@ -168,7 +168,7 @@ main();
                 </div>
                 <div class="product-description">
                     <h2>Product Description</h2>
-                    <p><b><span style="font-size: 16px;">ODIS Engineering 18 (ODIS-E)</span></b></p><p><b>Software Type: </b>Diagnostic and Programming Software</p><p><b>License: </b>unlimited</p><p><b>Languages: </b>English</p><p><b>Supported Hardware: </b>VAS6154 genuine devices or with Passthru interfaces.</p><p><b>Operating system: </b>Only Windows 10 or 11</p><p><br></p><p>The ODIS Engineering is designed for performing coding, adaptations, and settings of electronic control units.</p><p>Please note that certain coding functions can only be performed with online access, and you will not be able to use the online features and code the unit without a password and login (which are provided by official representatives).</p><p>This version uses D-PDU API Volkswagen 29.0.0 witch is the same as the one used in ODIS-S 23.2.x.</p><p>The program is locked for 1 computer and it does not work in Virtual Machines.</p><p><font color="#9c0000">Message me to receive the download link for the software, install the program, and request an activation key.</font><br></p>
+                    <p><b><span style="font-size: 16px;">VAG ODIS Engineering 18 (ODIS-E)</span></b></p><p><b>Software Type: </b>Diagnostic and Programming Software</p><p><b>License: </b>unlimited</p><p><b>Languages: </b>English</p><p><b>Supported Hardware: </b>VAS6154 genuine devices or with Passthru interfaces.</p><p><b>Operating system: </b>Only Windows 10 or 11</p><p><br></p><p>The ODIS Engineering is designed for performing coding, adaptations, and settings of electronic control units.</p><p>Please note that certain coding functions can only be performed with online access, and you will not be able to use the online features and code the unit without a password and login (which are provided by official representatives).</p><p>This version uses D-PDU API Volkswagen 29.0.0 witch is the same as the one used in ODIS-S 23.2.x.</p><p>The program is locked for 1 computer and it does not work in Virtual Machines.</p><p><font color="#9c0000">Message me to receive the download link for the software, install the program, and request an activation key.</font><br></p>
                 </div>
                 <a href="https://balabobbi.com/odis-engineering-18-activation-bb-100182" rel="nofollow" class="cta-button">View Product in Store</a>
             </div>
