--- a/index.html
+++ b/index.html
@@ -111,6 +111,15 @@
     
 
         <div class="product-card">
+            <img src="images/product_222_main.jpg" alt="MWM Motores Diesel EPC 08.2024">
+            <a href="mwm-motores-diesel-epc-08-2024-bb-100185.html" class="cta-button">View Details</a>
+            <h2>MWM Motores Diesel EPC 08.2024</h2>
+            <p><b>Price:</b> $155.00</p>
+            <!-- <a href="mwm-motores-diesel-epc-08-2024-bb-100185.html" class="cta-button">View Details</a> -->
+        </div>
+    
+
+        <div class="product-card">
             <img src="images/product_53_main.jpg" alt="BMW OEM Diagnosis Engineer System Training Book">
             <a href="bmw-oem-diagnosis-engineer-system-training-book-bb-100001.html" class="cta-button">View Details</a>
             <h2>BMW OEM Diagnosis Engineer System Training Book</h2>
