--- a/index.html
+++ b/index.html
@@ -120,6 +120,15 @@
     
 
         <div class="product-card">
+            <img src="images/product_223_main.jpg" alt="Mazda EPC 05.2024 General">
+            <a href="mazda-epc-05-2024-general-bb-100186.html" class="cta-button">View Details</a>
+            <h2>Mazda EPC 05.2024 General</h2>
+            <p><b>Price:</b> $185.00</p>
+            <!-- <a href="mazda-epc-05-2024-general-bb-100186.html" class="cta-button">View Details</a> -->
+        </div>
+    
+
+        <div class="product-card">
             <img src="images/product_53_main.jpg" alt="BMW OEM Diagnosis Engineer System Training Book">
             <a href="bmw-oem-diagnosis-engineer-system-training-book-bb-100001.html" class="cta-button">View Details</a>
             <h2>BMW OEM Diagnosis Engineer System Training Book</h2>
