--- a/index.html
+++ b/index.html
@@ -129,6 +129,15 @@
     
 
         <div class="product-card">
+            <img src="images/product_224_main.jpg" alt="CLARK ForkLift PartsPro Plus EPC 09.2024">
+            <a href="clark-forklift-partspro-plus-epc-09-2024-bb-100187.html" class="cta-button">View Details</a>
+            <h2>CLARK ForkLift PartsPro Plus EPC 09.2024</h2>
+            <p><b>Price:</b> $150.00</p>
+            <!-- <a href="clark-forklift-partspro-plus-epc-09-2024-bb-100187.html" class="cta-button">View Details</a> -->
+        </div>
+    
+
+        <div class="product-card">
             <img src="images/product_53_main.jpg" alt="BMW OEM Diagnosis Engineer System Training Book">
             <a href="bmw-oem-diagnosis-engineer-system-training-book-bb-100001.html" class="cta-button">View Details</a>
             <h2>BMW OEM Diagnosis Engineer System Training Book</h2>
