--- a/index.html
+++ b/index.html
@@ -1576,6 +1576,15 @@
             <!-- <a href="scania-multi-05-2024-bb-100177.html" class="cta-button">View Details</a> -->
         </div>
     
+
+        <div class="product-card">
+            <img src="images/product_225_main.jpg" alt="ZF Automotive EPC 08.2024">
+            <a href="zf-automotive-epc-08-2024-bb-100188.html" class="cta-button">View Details</a>
+            <h2>ZF Automotive EPC 08.2024</h2>
+            <p><b>Price:</b> $155.00</p>
+            <!-- <a href="zf-automotive-epc-08-2024-bb-100188.html" class="cta-button">View Details</a> -->
+        </div>
+    
     </div>
     <footer>
         <p>For more information and to make purchases, please visit our <a href="https://balabobbi.com/" rel="nofollow">main store</a>.</p>
