--- a/index.html
+++ b/index.html
@@ -1585,6 +1585,15 @@
             <!-- <a href="zf-automotive-epc-08-2024-bb-100188.html" class="cta-button">View Details</a> -->
         </div>
     
+
+        <div class="product-card">
+            <img src="images/product_226_main.jpg" alt="Eaton Brazil EPC Product Catalog 08.2024">
+            <a href="eaton-brazil-epc-product-catalog-08-2024-bb-100189.html" class="cta-button">View Details</a>
+            <h2>Eaton Brazil EPC Product Catalog 08.2024</h2>
+            <p><b>Price:</b> $135.00</p>
+            <!-- <a href="eaton-brazil-epc-product-catalog-08-2024-bb-100189.html" class="cta-button">View Details</a> -->
+        </div>
+    
     </div>
     <footer>
         <p>For more information and to make purchases, please visit our <a href="https://balabobbi.com/" rel="nofollow">main store</a>.</p>
