--- a/index.html
+++ b/index.html
@@ -1594,6 +1594,15 @@
             <!-- <a href="eaton-brazil-epc-product-catalog-08-2024-bb-100189.html" class="cta-button">View Details</a> -->
         </div>
     
+
+        <div class="product-card">
+            <img src="images/product_227_main.jpg" alt="SEM EDT Electronic Diagnostic Tool 2021B">
+            <a href="sem-edt-electronic-diagnostic-tool-2021b-bb-100190.html" class="cta-button">View Details</a>
+            <h2>SEM EDT Electronic Diagnostic Tool 2021B</h2>
+            <p><b>Price:</b> $155.00</p>
+            <!-- <a href="sem-edt-electronic-diagnostic-tool-2021b-bb-100190.html" class="cta-button">View Details</a> -->
+        </div>
+    
     </div>
     <footer>
         <p>For more information and to make purchases, please visit our <a href="https://balabobbi.com/" rel="nofollow">main store</a>.</p>
