--- a/index.html
+++ b/index.html
@@ -1603,6 +1603,15 @@
             <!-- <a href="sem-edt-electronic-diagnostic-tool-2021b-bb-100190.html" class="cta-button">View Details</a> -->
         </div>
     
+
+        <div class="product-card">
+            <img src="images/product_228_main.jpg" alt="Allison Transmission EPC - Troubleshooting &amp; Service Manuals">
+            <a href="allison-transmission-epc-troubleshooting-service-manuals-bb-100191.html" class="cta-button">View Details</a>
+            <h2>Allison Transmission EPC - Troubleshooting &amp; Service Manuals</h2>
+            <p><b>Price:</b> $200.00</p>
+            <!-- <a href="allison-transmission-epc-troubleshooting-service-manuals-bb-100191.html" class="cta-button">View Details</a> -->
+        </div>
+    
     </div>
     <footer>
         <p>For more information and to make purchases, please visit our <a href="https://balabobbi.com/" rel="nofollow">main store</a>.</p>
