--- a/index.html
+++ b/index.html
@@ -1639,6 +1639,15 @@
             <!-- <a href="agco-sisu-power-wineem4-service-tool-2-8-4-bb-100194.html" class="cta-button">View Details</a> -->
         </div>
     
+
+        <div class="product-card">
+            <img src="images/product_232_main.jpg" alt="BELL Articulated Dump Trucks Full Operator Manual, Service Manual, Part Manual">
+            <a href="bell-articulated-dump-trucks-full-operator-manual-service-manual-part-manual-bb-100195.html" class="cta-button">View Details</a>
+            <h2>BELL Articulated Dump Trucks Full Operator Manual, Service Manual, Part Manual</h2>
+            <p><b>Price:</b> $200.00</p>
+            <!-- <a href="bell-articulated-dump-trucks-full-operator-manual-service-manual-part-manual-bb-100195.html" class="cta-button">View Details</a> -->
+        </div>
+    
     </div>
     <footer>
         <p>For more information and to make purchases, please visit our <a href="https://balabobbi.com/" rel="nofollow">main store</a>.</p>
