--- a/index.html
+++ b/index.html
@@ -1648,6 +1648,15 @@
             <!-- <a href="bell-articulated-dump-trucks-full-operator-manual-service-manual-part-manual-bb-100195.html" class="cta-button">View Details</a> -->
         </div>
     
+
+        <div class="product-card">
+            <img src="images/product_233_main.jpg" alt="Maserati Levante M161 2017-2020 Workshop Manual, Wiring Diagram">
+            <a href="maserati-levante-m161-2017-2020-workshop-manual-wiring-diagram-bb-100196.html" class="cta-button">View Details</a>
+            <h2>Maserati Levante M161 2017-2020 Workshop Manual, Wiring Diagram</h2>
+            <p><b>Price:</b> $150.00</p>
+            <!-- <a href="maserati-levante-m161-2017-2020-workshop-manual-wiring-diagram-bb-100196.html" class="cta-button">View Details</a> -->
+        </div>
+    
     </div>
     <footer>
         <p>For more information and to make purchases, please visit our <a href="https://balabobbi.com/" rel="nofollow">main store</a>.</p>
