--- a/index.html
+++ b/index.html
@@ -1666,6 +1666,15 @@
             <!-- <a href="honda-epc-general-06-2024-bb-100197.html" class="cta-button">View Details</a> -->
         </div>
     
+
+        <div class="product-card">
+            <img src="images/product_235_main.jpg" alt="CNH EST 9.11 Engineering">
+            <a href="cnh-est-9-11-engineering-bb-100198.html" class="cta-button">View Details</a>
+            <h2>CNH EST 9.11 Engineering</h2>
+            <p><b>Price:</b> $175.00</p>
+            <!-- <a href="cnh-est-9-11-engineering-bb-100198.html" class="cta-button">View Details</a> -->
+        </div>
+    
     </div>
     <footer>
         <p>For more information and to make purchases, please visit our <a href="https://balabobbi.com/" rel="nofollow">main store</a>.</p>
