--- a/index.html
+++ b/index.html
@@ -1675,6 +1675,15 @@
             <!-- <a href="cnh-est-9-11-engineering-bb-100198.html" class="cta-button">View Details</a> -->
         </div>
     
+
+        <div class="product-card">
+            <img src="images/product_236_main.jpg" alt="CNH eTimGo 06.2024 for All brands (base for eTimGo)">
+            <a href="cnh-etimgo-06-2024-all-brands-base-etimgo-bb-100199.html" class="cta-button">View Details</a>
+            <h2>CNH eTimGo 06.2024 for All brands (base for eTimGo)</h2>
+            <p><b>Price:</b> $365.00</p>
+            <!-- <a href="cnh-etimgo-06-2024-all-brands-base-etimgo-bb-100199.html" class="cta-button">View Details</a> -->
+        </div>
+    
     </div>
     <footer>
         <p>For more information and to make purchases, please visit our <a href="https://balabobbi.com/" rel="nofollow">main store</a>.</p>
