--- a/index.html
+++ b/index.html
@@ -1711,6 +1711,15 @@
             <!-- <a href="linde-truck-doctor-2-01-05-2016-master-level-bb-100202.html" class="cta-button">View Details</a> -->
         </div>
     
+
+        <div class="product-card">
+            <img src="images/product_240_main.jpg" alt="Linde Pathfinder LMH + KWS 3.6.2.11 2020">
+            <a href="linde-pathfinder-lmh-kws-3-6-2-11-2020-bb-100203.html" class="cta-button">View Details</a>
+            <h2>Linde Pathfinder LMH + KWS 3.6.2.11 2020</h2>
+            <p><b>Price:</b> $100.00</p>
+            <!-- <a href="linde-pathfinder-lmh-kws-3-6-2-11-2020-bb-100203.html" class="cta-button">View Details</a> -->
+        </div>
+    
     </div>
     <footer>
         <p>For more information and to make purchases, please visit our <a href="https://balabobbi.com/" rel="nofollow">main store</a>.</p>
