--- a/index.html
+++ b/index.html
@@ -1720,6 +1720,15 @@
             <!-- <a href="linde-pathfinder-lmh-kws-3-6-2-11-2020-bb-100203.html" class="cta-button">View Details</a> -->
         </div>
     
+
+        <div class="product-card">
+            <img src="images/product_241_main.jpg" alt="Detroit Diesel Diagnostic Link DDDL 8.20 SP1 (Level 10 10 10) 2024">
+            <a href="detroit-diesel-diagnostic-link-dddl-8-20-sp1-level-10-10-10-2024.html" class="cta-button">View Details</a>
+            <h2>Detroit Diesel Diagnostic Link DDDL 8.20 SP1 (Level 10 10 10) 2024</h2>
+            <p><b>Price:</b> $135.00</p>
+            <!-- <a href="detroit-diesel-diagnostic-link-dddl-8-20-sp1-level-10-10-10-2024.html" class="cta-button">View Details</a> -->
+        </div>
+    
     </div>
     <footer>
         <p>For more information and to make purchases, please visit our <a href="https://balabobbi.com/" rel="nofollow">main store</a>.</p>
