--- a/index.html
+++ b/index.html
@@ -1738,6 +1738,15 @@
             <!-- <a href="vag-odis-online-access-1time-login-bb-100205.html" class="cta-button">View Details</a> -->
         </div>
     
+
+        <div class="product-card">
+            <img src="images/product_243_main.jpg" alt="Yanmar Smart Assist 2.45">
+            <a href="yanmar-smart-assist-2-45-bb-100206.html" class="cta-button">View Details</a>
+            <h2>Yanmar Smart Assist 2.45</h2>
+            <p><b>Price:</b> $199.00</p>
+            <!-- <a href="yanmar-smart-assist-2-45-bb-100206.html" class="cta-button">View Details</a> -->
+        </div>
+    
     </div>
     <footer>
         <p>For more information and to make purchases, please visit our <a href="https://balabobbi.com/" rel="nofollow">main store</a>.</p>
