--- a/index.html
+++ b/index.html
@@ -1747,6 +1747,15 @@
             <!-- <a href="yanmar-smart-assist-2-45-bb-100206.html" class="cta-button">View Details</a> -->
         </div>
     
+
+        <div class="product-card">
+            <img src="images/product_244_main.jpg" alt="Yale PC Service Tool 5.3">
+            <a href="yale-pc-service-tool-5-3-bb-100207.html" class="cta-button">View Details</a>
+            <h2>Yale PC Service Tool 5.3</h2>
+            <p><b>Price:</b> $120.00</p>
+            <!-- <a href="yale-pc-service-tool-5-3-bb-100207.html" class="cta-button">View Details</a> -->
+        </div>
+    
     </div>
     <footer>
         <p>For more information and to make purchases, please visit our <a href="https://balabobbi.com/" rel="nofollow">main store</a>.</p>
