--- a/index.html
+++ b/index.html
@@ -1756,6 +1756,15 @@
             <!-- <a href="yale-pc-service-tool-5-3-bb-100207.html" class="cta-button">View Details</a> -->
         </div>
     
+
+        <div class="product-card">
+            <img src="images/product_245_main.jpg" alt="Wabco Toolbox Plus 14.2.1.0">
+            <a href="wabco-toolbox-plus-14-2-1-0-bb-100208.html" class="cta-button">View Details</a>
+            <h2>Wabco Toolbox Plus 14.2.1.0</h2>
+            <p><b>Price:</b> $120.00</p>
+            <!-- <a href="wabco-toolbox-plus-14-2-1-0-bb-100208.html" class="cta-button">View Details</a> -->
+        </div>
+    
     </div>
     <footer>
         <p>For more information and to make purchases, please visit our <a href="https://balabobbi.com/" rel="nofollow">main store</a>.</p>
