--- a/index.html
+++ b/index.html
@@ -1774,6 +1774,15 @@
             <!-- <a href="winols-ecm-titanium-video-course-how-to-remap-dsg-s-tronic-zf-bb-100209.html" class="cta-button">View Details</a> -->
         </div>
     
+
+        <div class="product-card">
+            <img src="images/product_247_main.jpg" alt="Volvo Penta Vodia 5.2.50 + APCI 2018">
+            <a href="volvo-penta-vodia-5.2.50-apci-2018-bb-100210.html" class="cta-button">View Details</a>
+            <h2>Volvo Penta Vodia 5.2.50 + APCI 2018</h2>
+            <p><b>Price:</b> $215.00</p>
+            <!-- <a href="volvo-penta-vodia-5.2.50-apci-2018-bb-100210.html" class="cta-button">View Details</a> -->
+        </div>
+    
     </div>
     <footer>
         <p>For more information and to make purchases, please visit our <a href="https://balabobbi.com/" rel="nofollow">main store</a>.</p>
