--- a/index.html
+++ b/index.html
@@ -1783,6 +1783,15 @@
             <!-- <a href="volvo-penta-vodia-5.2.50-apci-2018-bb-100210.html" class="cta-button">View Details</a> -->
         </div>
     
+
+        <div class="product-card">
+            <img src="images/product_248_main.jpg" alt="VAG ETKA 8.3 10.2024 (VMV)">
+            <a href="vag-etka-8-3-10-2024-vmv-bb-100211.html" class="cta-button">View Details</a>
+            <h2>VAG ETKA 8.3 10.2024 (VMV)</h2>
+            <p><b>Price:</b> $155.00</p>
+            <!-- <a href="vag-etka-8-3-10-2024-vmv-bb-100211.html" class="cta-button">View Details</a> -->
+        </div>
+    
     </div>
     <footer>
         <p>For more information and to make purchases, please visit our <a href="https://balabobbi.com/" rel="nofollow">main store</a>.</p>
