--- a/index.html
+++ b/index.html
@@ -1810,6 +1810,15 @@
             <!-- <a href="tesla-toolbox-3-online-1-day-1-month-access-bb-100213.html" class="cta-button">View Details</a> -->
         </div>
     
+
+        <div class="product-card">
+            <img src="images/product_251_main.jpg" alt="Subaru Select Monitor 4 EU v37.6.0 2024">
+            <a href="subaru-select-monitor-4-eu-v37-6-0-2024-bb-100214.html" class="cta-button">View Details</a>
+            <h2>Subaru Select Monitor 4 EU v37.6.0 2024</h2>
+            <p><b>Price:</b> $250.00</p>
+            <!-- <a href="subaru-select-monitor-4-eu-v37-6-0-2024-bb-100214.html" class="cta-button">View Details</a> -->
+        </div>
+    
     </div>
     <footer>
         <p>For more information and to make purchases, please visit our <a href="https://balabobbi.com/" rel="nofollow">main store</a>.</p>
