--- a/index.html
+++ b/index.html
@@ -1819,6 +1819,15 @@
             <!-- <a href="subaru-select-monitor-4-eu-v37-6-0-2024-bb-100214.html" class="cta-button">View Details</a> -->
         </div>
     
+
+        <div class="product-card">
+            <img src="images/product_252_main.jpg" alt="Subaru Select Monitor 4 NA v36.1.5 2024">
+            <a href="subaru-select-monitor-4-na-v36-1-5-2024-bb-100215.html" class="cta-button">View Details</a>
+            <h2>Subaru Select Monitor 4 NA v36.1.5 2024</h2>
+            <p><b>Price:</b> $250.00</p>
+            <!-- <a href="subaru-select-monitor-4-na-v36-1-5-2024-bb-100215.html" class="cta-button">View Details</a> -->
+        </div>
+    
     </div>
     <footer>
         <p>For more information and to make purchases, please visit our <a href="https://balabobbi.com/" rel="nofollow">main store</a>.</p>
