--- a/index.html
+++ b/index.html
@@ -1828,6 +1828,15 @@
             <!-- <a href="subaru-select-monitor-4-na-v36-1-5-2024-bb-100215.html" class="cta-button">View Details</a> -->
         </div>
     
+
+        <div class="product-card">
+            <img src="images/product_253_main.jpg" alt="EFILive v8.3.38 Full">
+            <a href="efilive-v8-3-38-full-bb-100216.html" class="cta-button">View Details</a>
+            <h2>EFILive v8.3.38 Full</h2>
+            <p><b>Price:</b> $300.00</p>
+            <!-- <a href="efilive-v8-3-38-full-bb-100216.html" class="cta-button">View Details</a> -->
+        </div>
+    
     </div>
     <footer>
         <p>For more information and to make purchases, please visit our <a href="https://balabobbi.com/" rel="nofollow">main store</a>.</p>
