--- a/index.html
+++ b/index.html
@@ -1846,6 +1846,15 @@
             <!-- <a href="bmw-ista-d-4-39-ista-p-3-71-e-sys-plus-3-8-etk-inpa-nsc-expert-sp-daten-71-acronis-image-bb-100217.html" class="cta-button">View Details</a> -->
         </div>
     
+
+        <div class="product-card">
+            <img src="images/product_255_main.jpg" alt="Chrysler Flash Files (Chrysler, Dodge, Jeep, Fiat, Alfa Romeo, Lancia) 2006-2020">
+            <a href="chryslerflashfiles-chrysler-dodge-jeep-fiat-alfaromeo-lancia-2006-2020-bb-100218.html" class="cta-button">View Details</a>
+            <h2>Chrysler Flash Files (Chrysler, Dodge, Jeep, Fiat, Alfa Romeo, Lancia) 2006-2020</h2>
+            <p><b>Price:</b> $65.00</p>
+            <!-- <a href="chryslerflashfiles-chrysler-dodge-jeep-fiat-alfaromeo-lancia-2006-2020-bb-100218.html" class="cta-button">View Details</a> -->
+        </div>
+    
     </div>
     <footer>
         <p>For more information and to make purchases, please visit our <a href="https://balabobbi.com/" rel="nofollow">main store</a>.</p>
